// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can alias the named import 1`] = `
"import _JSXStyle from 'styled-jsx/style';


({
    styles: <_JSXStyle styleId={\\"2886504620\\"} css={\\"div.jsx-2886504620{color:red;}\\"} />,
    className: 'jsx-2886504620'
});"
`;

exports[`injects JSXStyle for nested scope 1`] = `
"import _JSXStyle from 'styled-jsx/style';


function test() {
  ({
    styles: <_JSXStyle styleId={\\"2886504620\\"} css={\\"div.jsx-2886504620{color:red;}\\"} />,
    className: 'jsx-2886504620'
  });
}"
`;

exports[`transpiles correctly 1`] = `
"import _JSXStyle from 'styled-jsx/style';


const { className, styles } = {
  styles: <_JSXStyle styleId={\\"2052294191\\"} css={\\"div.jsx-2052294191{color:red;}\\"} />,
  className: 'jsx-2052294191'
};

const dynamicStyles = props => ({
  styles: <_JSXStyle styleId={\\"290194820\\"} css={\`div.__jsx-style-dynamic-selector{color:\${props.color};}\`} dynamic={[props.color]} />,
  className: _JSXStyle.dynamic([['290194820', [props.color]]])
});

const test = {
  styles: <_JSXStyle styleId={\\"2052294191\\"} css={\\"div.jsx-2052294191{color:red;}\\"} />,
  className: 'jsx-2052294191'
};

const dynamicStyles2 = props => ({
  styles: <_JSXStyle styleId={\\"290194820\\"} css={\`div.__jsx-style-dynamic-selector{color:\${props.color};}\`} dynamic={[props.color]} />,
  className: _JSXStyle.dynamic([['290194820', [props.color]]])
});

const ExampleComponent = props => {
  const { className, styles } = dynamicStyles(props);

  return <div className={className}>
      howdy
      {styles}
    </div>;
};"
`;
